nearly final version