@@ -5,8 +5,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Locale;
 
 /**
  * Saving board to .csv file
@@ -15,13 +13,12 @@ public class SaveBoard {
     Engine.Field[][] board;
 
     public SaveBoard(){}
-    public SaveBoard(Engine.Field board [][]){
+    public SaveBoard(Engine.Field[][] board){
             this.board=board;
     }
 
     /**
      * setting board to save
-     * @param board
      */
     public void setBoard(Engine.Field[][] board) {
         this.board = board;
@@ -29,30 +26,30 @@ public class SaveBoard {
 
     /**
      * converting board to string
-     * @return
      */
     private String boardToCSV() throws IOException {
-        String boardCSV="";
+        StringBuilder boardCSV= new StringBuilder();
         for (int i = 1; i < board.length-1; i++) {
             for (int j = 1; j < board.length-1; j++) {
                 switch(board[i][j]){
-                    case WALL-> boardCSV+="[#],";
-                    case WALL1-> boardCSV+="[1],";
-                    case WALL2-> boardCSV+="[2],";
-                    case WALL3-> boardCSV+="[3],";
-                    case WALL4-> boardCSV+="[4],";
-                    case WALL0-> boardCSV+="[0],";
-                    case LIGHTED-> boardCSV+="[.],";
-                    case LIGHTED2-> boardCSV+="[:],";
-                    case EMPTY-> boardCSV+="[ ],";
-                    case BULB-> boardCSV+="[*],";
+                    case WALL-> boardCSV.append("[#],");
+                    case WALL1-> boardCSV.append("[1],");
+                    case WALL2-> boardCSV.append("[2],");
+                    case WALL3-> boardCSV.append("[3],");
+                    case WALL4-> boardCSV.append("[4],");
+                    case WALL0-> boardCSV.append("[0],");
+                    case LIGHTED-> boardCSV.append("[.],");
+                    case LIGHTED2-> boardCSV.append("[:],");
+                    case EMPTY-> boardCSV.append("[ ],");
+                    case BULB-> boardCSV.append("[*],");
                     default-> throw new IOException("Internal Error");
                 }
-            }boardCSV=boardCSV.substring(0,boardCSV.length()-1);
-            boardCSV+="\n";
+            }
+            boardCSV = new StringBuilder(boardCSV.substring(0, boardCSV.length() - 1));
+            boardCSV.append("\n");
         }
-        boardCSV=boardCSV.substring(0,boardCSV.length()-1);
-        return boardCSV;
+        boardCSV = new StringBuilder(boardCSV.substring(0, boardCSV.length() - 1));
+        return boardCSV.toString();
     }
 
     /**
@@ -63,7 +60,7 @@ public class SaveBoard {
         String boardCSV=boardToCSV();
         Path path = Paths.get("./saves/save"+saveNumber.toString()+".csv");
         try {
-            Files.write(path, boardCSV.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(path, boardCSV);
         } catch (IOException ex) {
             System.out.println("Nie mogę zapisać pliku.");
         }
